# Modern-Cpp-For-CV

./: README.md
homework_1/: README.md
homework_1/task_1/: commands.sh
homework_1/task_2_using_build.sh/: build.sh
homework_1/task_2_using_cmake/: CMakeLists.txt  run.sh
homework_2/: README.md
homework_2/task_1/: main.cpp
homework_2/task_2/: main.cpp  task_2
homework_3/: CMakeLists.txt  README.md
homework_3/include/: homework_3.h  html_writer.hpp
homework_3/src/: create_image_browser.cpp  html_writer.cpp  image_browser.cpp
homework_3/web_app/: test.html
